[metadata]
name = oomstore
version = 0.0.1
author = oom.ai
author_email = evan.chanyiksan@gmail.com
description = oomstore python sdk
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/oom-ai/oomstore
project_urls =
    Bug Tracker = https://github.com/oom-ai/oomstore/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.7

[options.packages.find]
where = src
